# pyobjcryst

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  INSTALL.txt  ISSUES.txt  LICENSE-DANSE.rst  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  SConstruct  TODO.txt  cookiecutter.json  genindex-A.html  genindex-B.html  genindex-C.html  genindex-D.html  genindex-E.html  genindex-F.html  genindex-G.html  genindex-H.html  genindex-I.html  genindex-K.html  genindex-L.html  genindex-M.html  genindex-N.html  genindex-O.html  genindex-P.html  genindex-Q.html  genindex-R.html  (+22 more)
.codespell/: ignore_words.txt
_modules/: index.html  pyobjcryst.html
_sources/: getting-started.rst.txt  index.txt
_static/: basic.css  documentation_options.js
api/: modules.html  pyobjcryst.example_package.html  pyobjcryst.html  pyobjcryst.tests.html
applications/: pyobjcryst-config
boost/: Makefile  SConscript  asymmetricunit_ext.cpp  atom_ext.cpp  converters.hpp  crystal_ext.cpp  general_ext.cpp  globalscatteringpower_ext.cpp  module.make  molatom_ext.cpp  molbond_ext.cpp  molbondangle_ext.cpp  moldihedralangle_ext.cpp  molecule_ext.cpp  objregistry_ext.cpp  polyhedron_ext.cpp  pyobjcryst.cpp  quaternion_ext.cpp  refinableobj_ext.cpp  refinableobjclock_ext.cpp  refinablepar_ext.cpp  refobjopt_ext.cpp  refpartype_ext.cpp  registerconverters.cpp  restraint_ext.cpp  rigidgroup_ext.cpp  scatterer_ext.cpp  scatteringcomponent_ext.cpp  scatteringcomponentlist_ext.cpp  scatteringpower_ext.cpp  scatteringpoweratom_ext.cpp  scatteringpowersphere_ext.cpp  spacegroup_ext.cpp  stretchmode_ext.cpp  unitcell_ext.cpp  zatom_ext.cpp  zpolyhedron_ext.cpp  zscatterer_ext.cpp
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.py  sconscript.local
devtools/: mkdist.mak
devutils/: install-conda-env.sh  makesdist  mkdist.mak
doc/: Makefile  environment.yml  requirements.txt
docs/: Makefile
examples/: QPA-Quantitative phase analysis.html  QPA-Quantitative phase analysis.ipynb  Quantitative-phase-analysis.html  cimetidine-structure-solution-powder.ipynb  crystal_3d_widget.html  crystal_3d_widget.ipynb  examples.html  index.html  single-crystal-data.html  single-crystal-data.ipynb  structure-solution-multiprocessing.html  structure-solution-multiprocessing.ipynb  structure-solution-powder-cimetidine.html  structure-solution-powder-cimetidine.ipynb  structure-solution-powder-pbso4.html  structure-solution-powder-pbso4.ipynb
extensions/: SConscript  SConscript.configure  asymmetricunit_ext.cpp  atom_ext.cpp  converters.hpp  crystal_ext.cpp  diffractiondatasinglecrystal_ext.cpp  general_ext.cpp  globalscatteringpower_ext.cpp  helpers.cpp  helpers.hpp  io_ext.cpp  lsqnumobj_ext.cpp  molatom_ext.cpp  molbond_ext.cpp  molbondangle_ext.cpp  pyobjcryst.cpp  (+34 more)
(+301 files in other folders)
